Format button tray and add color buttons

--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
 
     <body>
         <div id="canvas"></div>
-        <button>Reset</button>
+        <div id="buttonbar">
+            <button id="reset">Reset</button>
+            <button id="black">Black</button>
+            <button id="red">Red</button>
+            <button id="blue">Blue</button>
+            <button id="green">Green</button>
+        </div>
+        
     </body>
     <script src="javascript.js"></script>
 </html>
