Change background color change from classList.add to changeBackgroundColor and add multiple colors

--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
     </head>
 
     <body>
+        <button id="resize"> Resize </button>
         <div id="canvas"></div>
         <div id="buttonbar">
             <button id="reset">Reset</button>
-            <button id="black">Black</button>
-            <button id="red">Red</button>
-            <button id="blue">Blue</button>
-            <button id="green">Green</button>
+            <button class="color" id="black">Black</button>
+            <button class="color" id="red">Red</button>
+            <button class="color" id="blue">Blue</button>
+            <button class="color" id="green">Green</button>
         </div>
         
     </body>
